calendar_integration/sync.log
Traceback (most recent call last):
  File "/Users/tengda/Antigravity/calendar_integration/sync_to_notion.py", line 3, in <module>
    import requests
ModuleNotFoundError: No module named 'requests'
  File "/Users/tengda/Antigravity/calendar_integration/sync_to_notion.py", line 75
    print(f"DEBUG {cal_name}: {event.get("summary")}")
                                          ^
SyntaxError: f-string: unmatched '('
Traceback (most recent call last):
  File "/Users/tengda/Antigravity/calendar_integration/sync_to_notion.py", line 4, in <module>
    import requests
ModuleNotFoundError: No module named 'requests'
Traceback (most recent call last):
  File "/Users/tengda/Antigravity/calendar_integration/sync_to_notion.py", line 4, in <module>
    import requests
ModuleNotFoundError: No module named 'requests'
